<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_screen"
    android:padding="24dp"
    tools:context=".PostSignUpActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imgClose"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:padding="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_baseline_clear_24"
            app:tint="@color/primary" />

        <Button
            android:id="@+id/btnResend"
            style="@style/primary_small_text_button"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/resend_email_verification_link"
            app:layout_constraintBottom_toTopOf="@+id/btnUpdateEmail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="TouchTargetSizeCheck" />

        <Button
            android:id="@+id/btnUpdateEmail"
            style="@style/primary_small_text_button"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/update_email_address"
            app:layout_constraintBottom_toTopOf="@+id/btnSignOut"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="TouchTargetSizeCheck" />

        <Button
            android:id="@+id/btnSignOut"
            style="@style/opposite_small_text_button"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/sign_out"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="TouchTargetSizeCheck" />

        <ImageView
            android:id="@+id/imgIcon"
            android:layout_width="192dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:adjustViewBounds="true"
            app:layout_constraintEnd_toEndOf="@+id/tvActivityTitle"
            app:layout_constraintStart_toStartOf="@+id/tvActivityTitle"
            app:layout_constraintTop_toBottomOf="@+id/tvActivityTitle"
            app:srcCompat="@drawable/ic_baseline_email_24"
            app:tint="@color/primary" />

        <TextView
            android:id="@+id/tvPrompt"
            style="@style/common_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/email_verification_link_prompt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgIcon" />

        <TextView
            android:id="@+id/textView9"
            style="@style/common_text_variant_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/email_verification_link_help"
            app:layout_constraintEnd_toEndOf="@+id/tvPrompt"
            app:layout_constraintStart_toStartOf="@+id/tvPrompt"
            app:layout_constraintTop_toBottomOf="@+id/tvPrompt" />

        <TextView
            android:id="@+id/tvActivityTitle"
            style="@style/activity_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/email_address_verification"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgClose" />

        <TextView
            android:id="@+id/tvCountdown"
            style="@style/common_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/email_verification_link_countdown"
            android:textColor="?attr/theme_text_color_variant_1"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/btnResend"
            app:layout_constraintEnd_toEndOf="@+id/btnResend"
            app:layout_constraintStart_toStartOf="@+id/btnResend" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>