<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="32dp">

    <androidx.cardview.widget.CardView
        style="@style/dialog_card"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imageView12"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/bg_screen_bottom" />

            <Button
                android:id="@+id/btnConfirm"
                style="@style/primary_small_text_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="16dp"
                android:text="@string/select"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/btnCancel"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

            <Button
                android:id="@+id/btnCancel"
                style="@style/opposite_small_text_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="16dp"
                android:text="@android:string/cancel"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/btnConfirm"
                app:layout_constraintTop_toTopOf="@+id/btnConfirm" />

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="@+id/tvMessageTitle"
                app:layout_constraintStart_toStartOf="@+id/tvMessageTitle"
                app:layout_constraintTop_toBottomOf="@+id/tvMessageTitle">

                <RadioButton
                    android:id="@+id/radioButton"
                    style="@style/message_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:buttonTint="?attr/colorPrimary"
                    android:checked="true"
                    android:text="@string/all"
                    android:textAlignment="textStart" />

                <RadioButton
                    android:id="@+id/radioButton2"
                    style="@style/message_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:buttonTint="?attr/colorPrimary"
                    android:text="@string/non_admin"
                    android:textAlignment="textStart" />

                <RadioButton
                    android:id="@+id/radioButton3"
                    style="@style/message_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:buttonTint="?attr/colorPrimary"
                    android:text="@string/admin"
                    android:textAlignment="textStart" />

                <RadioButton
                    android:id="@+id/radioButton4"
                    style="@style/message_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:buttonTint="?attr/colorPrimary"
                    android:text="@string/admin_head"
                    android:textAlignment="textStart" />

                <RadioButton
                    android:id="@+id/radioButton5"
                    style="@style/message_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:buttonTint="?attr/colorPrimary"
                    android:text="@string/developer"
                    android:textAlignment="textStart" />

                <RadioButton
                    android:id="@+id/radioButton6"
                    style="@style/message_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:buttonTint="?attr/colorPrimary"
                    android:text="@string/lead_developer"
                    android:textAlignment="textStart" />
            </RadioGroup>

            <TextView
                android:id="@+id/tvMessageTitle"
                style="@style/dialog_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="32dp"
                android:text="@string/select_role"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>