<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="32dp">

    <androidx.cardview.widget.CardView
        style="@style/dialog_card"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imageView12"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/bg_screen" />

            <Button
                android:id="@+id/btnSubmit"
                style="@style/primary_small_text_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="16dp"
                android:text="@string/add"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="TouchTargetSizeCheck" />

            <EditText
                android:id="@+id/etPhoneNumber"
                style="@style/input_field_hint"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                android:drawableTint="@color/gray"
                android:ems="10"
                android:hint="@string/phone_number"
                android:inputType="numberDecimal|phone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvMessage"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

            <EditText
                android:id="@+id/etEmailAddress"
                style="@style/input_field_hint"
                android:layout_width="0dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                android:drawableTint="@color/gray"
                android:ems="10"
                android:hint="@string/email_address"
                android:inputType="textEmailAddress"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etPhoneNumber"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

            <ImageView
                android:id="@+id/imgClose"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:adjustViewBounds="true"
                android:padding="4dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_baseline_clear_24"
                app:tint="@color/red" />

            <MultiAutoCompleteTextView
                android:id="@+id/etLocationAddress"
                style="@style/input_field_hint"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="32dp"
                android:drawableTint="@color/gray"
                android:ems="10"
                android:hint="@string/location_address"
                android:inputType="textLongMessage|textMultiLine|textCapSentences|textImeMultiLine"
                android:maxLines="8"
                android:minLines="3"
                app:layout_constraintBottom_toTopOf="@+id/btnSubmit"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etEmailAddress"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

            <TextView
                android:id="@+id/tvPhoneNumberError"
                style="@style/error_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:text="@string/required_input_error"
                app:layout_constraintEnd_toEndOf="@+id/etEmailAddress"
                app:layout_constraintStart_toStartOf="@+id/etEmailAddress"
                app:layout_constraintTop_toBottomOf="@+id/etPhoneNumber" />

            <TextView
                android:id="@+id/tvEmailAddressError"
                style="@style/error_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:text="@string/required_input_error"
                app:layout_constraintEnd_toEndOf="@+id/etEmailAddress"
                app:layout_constraintStart_toStartOf="@+id/etEmailAddress"
                app:layout_constraintTop_toBottomOf="@+id/etEmailAddress" />

            <TextView
                android:id="@+id/tvMessage"
                style="@style/message_style"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/fill_out_prompt"
                app:layout_constraintEnd_toEndOf="@+id/tvMessageTitle"
                app:layout_constraintStart_toStartOf="@+id/tvMessageTitle"
                app:layout_constraintTop_toBottomOf="@+id/tvMessageTitle" />

            <TextView
                android:id="@+id/tvMessageTitle"
                style="@style/dialog_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:text="@string/contact_information"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>